added the second and third blog

--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,7 @@
 div {
     background: red; font-size: x-large;
     padding: 10px 5px;
+    margin: 50px 10px 100px;
+    /* margin-bottom: 100px; */
+    
 }
